Add password toggle functionality to Login and Register components

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -36,6 +36,7 @@ textarea {
   border: 1px solid rgba(255, 166, 0, 0.5) !important;
   outline: none !important;
   box-shadow: none !important;
+  background-color: whitesmoke !important;
 }
 body {
   font-family: "Poppins", sans-serif;
