--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -41,6 +41,7 @@ textarea {
 body {
   font-family: "Poppins", sans-serif;
   background-color: aliceblue;
+  overflow-y: scroll;
 }
 ::-webkit-scrollbar {
   width: 5px;
